--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,11 @@ spring.datasource.username=uclvdafrhuqcetn7
 spring.datasource.password=hCHRIvXj9PEc3dRtFlRk
 spring.datasource.url=jdbc:mysql://bvi86vjkctrtqokjptno-mysql.services.clever-cloud.com/bvi86vjkctrtqokjptno?useSSL=false
 
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.username=root
+#spring.datasource.password=12345asd
+#spring.datasource.url=jdbc:mysql://localhost:3309/database_example?useSSL=false
+
 #config hibernate
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
@@ -13,6 +18,9 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 security.jwt.secret=ghk45jgherogh
 security.jwt.issuer=Main
 security.jwt.ttlMillis=604800000
+
+#ruta de la carpeta de archivos
+upload.path=classpath:/uploads/
 
 springdoc.swagger-ui.path=/swagger-ui-custom.html
 
