--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 HELP.md
 target/
+!target/demo-0.0.1-SNAPSHOT.war
+!target/demo-0.0.1-SNAPSHOT.war.original
 
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
